--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -40,7 +40,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="d-item-desc">使用直接下载最新版</div>
+                        <div class="d-item-desc">直接下载最新版</div>
                         <div class="down-btn"><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io/releases/download/v3.04/Xdows.Security.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>  
                  </div>
