--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -49,6 +49,7 @@
                     <div class="newfunc">
                     <div class="newversion">3.05[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">启动动画</div>
                     <div class="newfunc-list">优化 UI</div>
                     <div class="newfunc-list">重构 MD5 扫描引擎</div>
                     <div class="newfunc-list">Kolo 云端扫描改为 ANK 云端扫描</div>
