--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -40,19 +40,6 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接1</div>
-                        <div class="d-item-desc">遇到下载器错误请点击此链接 <span class="update-time"></span></div>
-                        <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="https://pan.huang1111.cn/s/KbkVTY" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
-                    </div>
-                </div>
-            </div> 
-            <div class="down-ietm windows">
-                <div class="down-ietm-inner">
-                    <div class="logo-area">
-                        <div class="itemlogo"></div>
-                    </div>
-                    <div class="info-area">
-                        <div class="d-item-title">备用链接2</div>
                         <div class="d-item-desc">下载某些文件需要登录 <span class="update-time"></span></div>
                         <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
@@ -65,10 +52,36 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">备用链接3</div>
+                        <div class="d-item-title">备用链接2</div>
                         <div class="d-item-desc">来自小羊云盘链接 <span class="update-time"></span></div>
                         <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://pan.qiqikw.fun/s/5LfO" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                    </div>
+                </div>
+            </div> 
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">备用链接3</div>
+                        <div class="d-item-desc">来自 CZK 云盘链接 <span class="update-time"></span></div>
+                        <div class="d-item-desc">限速为 10 MB/s <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="http://pan.szczk.top/s/MjFk" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                    </div>
+                </div>
+            </div> 
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">备用链接4</div>
+                        <div class="d-item-desc">来自 huang1111 云盘链接 <span class="update-time"></span></div>
+                        <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://pan.huang1111.cn/s/KbkVTY" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div> 
