--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -62,6 +62,7 @@
                     <div class="newfunc-list">注册表修复增强</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">不显示任务栏图标/最小化异常（已修复）</div>
                     </div>
                 </div>
             </div>
