--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -58,6 +58,7 @@
                     <div class="newfunc-list">从托盘菜单中关闭软件</div>
                     <div class="newfunc-list">数字签名</div>
                     <div class="newfunc-list">侧边栏非线性运动</div>
+                    <div class="newfunc-list">自绘通知</div>
                     <div class="newfunc-list">Rua 文件粉碎 UI 更新</div>
                     <div class="newfunc-list">进程防护和文件防护将不会调用MD5扫描引擎</div>
                     <div class="newfunc-list">注册表修复增强</div>
