--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -54,6 +54,7 @@
                     <div class="newfunc-list">主页更新</div>
                     <div class="newfunc-list">Miniblink 调用底层重构</div>
                     <div class="newfunc-list">启动动画</div>
+                    <div class="newfunc-list">垃圾清理 UI 更新</div>
                     <div class="newfunc-list">优化 UI</div>
                     <div class="newfunc-list">重构 MD5 扫描引擎</div>
                     <div class="newfunc-list">Kolo 云端扫描改为 ANK 云端扫描</div>
