--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -49,6 +49,8 @@
                     <div class="newfunc">
                     <div class="newversion">3.05[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">文本修改</div>
+                    <div class="newfunc-list">选择夹悬停文本</div>
                     <div class="newfunc-list">修改按钮样式</div>
                     <div class="newfunc-list">关闭和最小化按钮优化</div>
                     <div class="newfunc-list">主页更新</div>
