--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -55,7 +55,9 @@
                     <div class="newfunc">
                     <div class="newversion">3.06[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">优化</div>
+                    <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
+                    <div class="newfunc-title">移除：</div>
+                    <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
@@ -77,7 +79,7 @@
                     <div class="newfunc-list">主页更新</div>
                     <div class="newfunc-list">系统修复功能增强</div>
                     <div class="newfunc-list">部分 UI 调整</div>
-                    <div class="newfunc-list">增加 CZK（为来）云扫描</div>
+                    <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
                     <div class="newfunc-list">广告拦截</div>
                     <div class="newfunc-title">Bugs：</div>
