--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -43,6 +43,7 @@
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">不显示任务栏图标/最小化异常（已修复）</div>
+                    <div class="newfunc-list">删除病毒完成后崩溃（未修复）</div>
                 </div>
             </div>
             <div class="history-version">
@@ -60,6 +61,7 @@
                     <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">删除病毒完成后崩溃（已修复）</div>
                     </div>
                 </div>
             </div>
