--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -57,6 +57,7 @@
                     <div class="newversion">3.06[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
+                    <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-title">Bugs：</div>
