--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -12,7 +12,7 @@
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/logo.ico" >
-    <title>xdows security-支持</title>
+    <title>Xdows Security-支持</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -45,7 +45,7 @@
                     <div class="newfunc-title">1.0-1.53</div>
                     <div class="newfunc-title">2.00-2.99</div>
                     <div class="newfunc-list">终止日期:2024年7月14日</div>
-                    <div class="newfunc-list">是否停止支持：否</div>
+                    <div class="newfunc-list">是否停止支持：是</div>
                     <div class="newfunc-title">1.0-1.53</div>
                     <div class="newfunc-list">终止日期:2023年7月28日</div>
                     <div class="newfunc-list">是否停止支持：是</div>
