--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -58,6 +58,8 @@
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">根目录字体</div>
+                    <div class="newfunc-list">通知支持关闭</div>
+                    <div class="newfunc-list">通知在没有参数的情况下会弹出测试通知</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-title">Bugs：</div>
