--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -60,6 +60,7 @@
                     <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-list">通知支持关闭</div>
                     <div class="newfunc-list">通知在没有参数的情况下会弹出测试通知</div>
+                    <div class="newfunc-list">侧边栏更加丝滑</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-title">Bugs：</div>
