--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -56,6 +56,7 @@
                     <div class="newfunc">
                     <div class="newversion">3.06[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">扫描完成后显示威胁数量</div>
                     <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-list">通知支持关闭</div>
