--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -13,7 +13,7 @@
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./img/logo.ico" >
-    <title>xdows security</title>
+    <title>Xdows Security</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./../script.js"></script>
