--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -90,7 +90,7 @@
         <div class="doc-inner">
             <!-- <div class="second-logo"></div> -->
             <div class="second-title">多种扫描方式</div>
-            <div class="second-desc">支持使用多达3个扫描引擎。</div>
+            <div class="second-desc">支持使用多个扫描引擎。</div>
         </div>
         <div class="doc-bg doc2">
             <img src="./img/zaixian.png" alt="" id="document">
@@ -99,7 +99,7 @@
     <div class="doc top-left" style="position:relative;">
         <div class="doc-inner">
             <div class="second-title">主题设置</div>
-            <div class="second-desc">支持浅色和深色模式以及跟随系统。</div>
+            <div class="second-desc">支持跟随系统的主题变化。</div>
         </div>
         <div class="doc-bg doc3">
             <!-- <div class="date-mobile-msg"></div>
