--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -27,7 +27,7 @@
         <div class="banner1-info new">
             <div class="wording">
                 <div class="move-title">Xdows Security<br>你的全新杀毒软件</div>
-                <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
+                <div class="move-desc">支持垃圾加速、病毒查杀、Xdows Tools 等功能。</div>
                 <div class="move-down">
                     <a href="./download.html" class="move-down-a" onClick="tcssReport('tim.index.downbtn');">
                         <span>立即下载</span>
