--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -67,7 +67,7 @@
             <div class="func-item">
                 <div class="func-logo2"></div>
                 <div class="func-title">云端杀毒</div>
-                <div class="func-desc">支持在两个服务器中查杀病毒，让你的电脑更加安全。</div>
+                <div class="func-desc">支持在多个服务器中查杀病毒，让你的电脑更加安全。</div>
             </div>
             <div class="func-item">
                 <div class="func-logo3"></div>
