--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -56,7 +56,7 @@
             <div class="func-title">恶意软件是如何进行攻击的</div>
             <div class="func-desc">
 恶意软件通过使用诡计来阻碍设备的正常使用。一旦网络罪犯通过一种或多种不同的技术（例如网络钓鱼电子邮件、受感染的文件、系统或软件漏洞、受感染的 U 盘或恶意网站）进入了你的设备，他们就会利用这种情况发起更多攻击、获取帐户凭据、收集个人信息进行出售、出售对计算资源的访问权限或向受害者勒索金钱。任何人都可能成为恶意软件攻击的受害者。尽管有些人可能知道如何识别攻击者试图通过恶意软件来攻击受害者的某些方式，例如知道如何识别网络钓鱼电子邮件，但网络罪犯很老练，他们会随着技术和安全改进而不断改进自己的方法。恶意软件攻击的外观和行为也因恶意软件的类型而异。例如，Rootkit 攻击的受害者可能甚至都不知道 Rootkit，因为此类恶意软件旨在尽可能长时间地潜伏并且不被发现。（取自 Microsoft 官网）
-            <div class="func-title">为什么要使用我们的产品</div>
+            <div class="func-title">为什么要使用 Xdows Security</div>
         </div>
         <div class="func-inner clear">
             <div class="func-item">
