--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">注意事项</div>
-                        <div class="d-item-desc">1.00-2.07都将停止支持 <span class="update-time"></span></div>
+                        <div class="d-item-desc">1.00-2.07都已停止支持 <span class="update-time"></span></div>
                         <div class="d-item-desc">部分代码参考PYAS的代码 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
                     </div>
