--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -56,6 +56,7 @@
                     <div class="newfunc">
                     <div class="newversion">3.06[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">自动拦截不受欢迎的应用程序</div>
                     <div class="newfunc-list">扫描完成后显示威胁数量</div>
                     <div class="newfunc-list">高级设置UI更新</div>
                     <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
