--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -137,6 +137,19 @@
                     </div>
                 </div>
             </div>  
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">软件文档</div>
+                        <div class="d-item-desc">查看所有软件文档 <span class="update-time"></span></div>
+                        <div class="d-item-desc">部分软件暂无文档 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://xty64xty.netlify.app/" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                    </div>
+                </div>
+            </div> 
             </div>
         </div>
     </div>
