--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -146,7 +146,7 @@
                         <div class="d-item-title">软件文档</div>
                         <div class="d-item-desc">查看所有软件文档 <span class="update-time"></span></div>
                         <div class="d-item-desc">部分软件暂无文档 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="https://xty64xty.netlify.app/" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="down-btn"><a href="https://xty64xty.netlify.app/" onClick="tcssReport('tim.downloads.windows');">查看</a></div>
                     </div>
                 </div>
             </div> 
