--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -59,7 +59,7 @@
                     <div class="newfunc-list">自动拦截不受欢迎的应用程序</div>
                     <div class="newfunc-list">扫描完成后显示威胁数量</div>
                     <div class="newfunc-list">高级设置UI更新</div>
-                    <div class="newfunc-list">FTQ Cloud 云端扫描引擎</div>
+                    <div class="newfunc-list">CFTQ Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">隔离信任模块（隔离区暂未开放）</div>
                     <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-list">尽量使用PID终止进程</div>
