--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -62,6 +62,7 @@
                     <div class="newfunc-list">CFTQ Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">隔离信任模块（隔离区暂未开放）</div>
                     <div class="newfunc-list">根目录字体</div>
+                    <div class="newfunc-list">主页新增软件更新选项</div>
                     <div class="newfunc-list">尽量使用PID终止进程</div>
                     <div class="newfunc-list">通知支持关闭</div>
                     <div class="newfunc-list">通知在没有参数的情况下会弹出测试通知</div>
