--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -74,6 +74,7 @@
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">删除病毒完成后崩溃（已修复）</div>
                     <div class="newfunc-list">更新程序最小化与关闭按钮不适配暗色主题（已修复）</div>
+                    <div class="newfunc-list">脚本防御报错（已修复）</div>
                     </div>
                 </div>
             </div>
