--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -79,9 +79,9 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接4</div>
-                        <div class="d-item-desc">来自小羊云盘链接 <span class="update-time"></span></div>
-                        <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="https://pan.qiqikw.fun/s/5LfO" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="d-item-desc">附带最新补丁、病毒库文件 <span class="update-time"></span></div>
+                        <div class="d-item-desc">解压密码为123 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://pan.baidu.com/s/1KFDtvMVkWJj33G6Q8QS4hQ?pwd=1234" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div> 
