--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -67,6 +67,7 @@
                     <div class="newfunc-list">通知支持关闭</div>
                     <div class="newfunc-list">通知在没有参数的情况下会弹出测试通知</div>
                     <div class="newfunc-list">侧边栏更加丝滑</div>
+                    <div class="newfunc-list">安装程序拦截</div>
                     <div class="newfunc-list">临时文件防护</div>
                     <div class="newfunc-list">任务管理器无法终止进程防护</div>
                     <div class="newfunc-title">移除：</div>
