--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -72,7 +72,7 @@
                     <div class="newfunc-list">任务管理器无法终止进程防护</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
-                    <div class="newfunc-list">内置使用文件</div>
+                    <div class="newfunc-list">内置使用教程文档</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">删除病毒完成后崩溃（已修复）</div>
