--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -60,6 +60,8 @@
                     <div class="newfunc-list">扫描完成后显示威胁数量</div>
                     <div class="newfunc-list">高级设置UI更新</div>
                     <div class="newfunc-list">CFTQ Cloud 云端扫描引擎</div>
+                    <div class="newfunc-list">扫描文件时无法打开该文件（仅限主程序和文件防护）</div>
+                    <div class="newfunc-list">主程序为焦点时置顶</div>
                     <div class="newfunc-list">隔离信任模块</div>
                     <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-list">主页新增软件更新选项</div>
