--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -66,9 +66,9 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接3</div>
-                        <div class="d-item-desc">来自 CZK 云盘链接 <span class="update-time"></span></div>
-                        <div class="d-item-desc">限速为 10 MB/s <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="http://pan.szczk.top/s/MjFk" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="d-item-desc">密码123 <span class="update-time"></span></div>
+                        <div class="d-item-desc">附带最新补丁、病毒库文件 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://down.szczk.top/onedrive15G/antivirussoft/Xdows.Security.3.05.7z" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div> 
