--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接3</div>
-                        <div class="d-item-desc">解压密码为密码123 <span class="update-time"></span></div>
+                        <div class="d-item-desc">解压密码为123 <span class="update-time"></span></div>
                         <div class="d-item-desc">附带最新补丁、病毒库文件 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://down.szczk.top/onedrive15G/antivirussoft/Xdows.Security.3.05.7z" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
