--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -44,6 +44,7 @@
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">不显示任务栏图标/最小化异常（已修复）</div>
                     <div class="newfunc-list">删除病毒完成后崩溃（已发布补丁）</div>
+                    <div class="newfunc-list">文件感染病毒（已修复）</div>
                 </div>
             </div>
             <div class="history-version">
