--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -72,8 +72,9 @@
                     <div class="newfunc-list">安装程序拦截</div>
                     <div class="newfunc-list">临时文件防护</div>
                     <div class="newfunc-list">隔离失败直接删除文件</div>
-                    <div class="newfunc-list">UI调整</div>
                     <div class="newfunc-list">任务管理器无法终止进程防护</div>
+                    <div class="newfunc-title">调整：</div>
+                    <div class="newfunc-list">部分软件UI</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
                     <div class="newfunc-list">内置使用教程文档</div>
