--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -70,11 +70,13 @@
                     <div class="newfunc-list">通知在没有参数的情况下会弹出测试通知</div>
                     <div class="newfunc-list">侧边栏更加丝滑</div>
                     <div class="newfunc-list">安装程序拦截</div>
+                    <div class="newfunc-list">自动检测环境问题</div>
                     <div class="newfunc-list">临时文件防护</div>
                     <div class="newfunc-list">隔离失败直接删除文件</div>
                     <div class="newfunc-list">弹窗优化</div>
                     <div class="newfunc-title">调整：</div>
                     <div class="newfunc-list">部分软件UI</div>
+                    <div class="newfunc-list">暂时禁止关闭防护</div>
                     <div class="newfunc-list">任务管理器无法终止进程防护</div>
                     <div class="newfunc-title">移除：</div>
                     <div class="newfunc-list">CZK（为来）云扫描</div>
