--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -63,6 +63,7 @@
                     <div class="newfunc-list">扫描文件时无法打开该文件（仅限主程序）</div>
                     <div class="newfunc-list">主程序为焦点时置顶</div>
                     <div class="newfunc-list">隔离信任模块</div>
+                    <div class="newfunc-list">设置主页风格</div>
                     <div class="newfunc-list">根目录字体</div>
                     <div class="newfunc-list">主页新增软件更新选项</div>
                     <div class="newfunc-list">尽量使用PID终止进程</div>
