--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -75,6 +75,7 @@
                     <div class="newfunc-list">临时文件防护</div>
                     <div class="newfunc-list">隔离失败直接删除文件</div>
                     <div class="newfunc-list">弹窗优化</div>
+                    <div class="newfunc-list">优化侧边栏逻辑</div>
                     <div class="newfunc-title">调整：</div>
                     <div class="newfunc-list">部分软件UI</div>
                     <div class="newfunc-list">暂时禁止关闭防护</div>
