--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -75,6 +75,7 @@
                     <div class="newfunc-list">临时文件防护</div>
                     <div class="newfunc-list">隔离失败直接删除文件</div>
                     <div class="newfunc-list">更高的权限</div>
+                    <div class="newfunc-list">自定义引擎</div>
                     <div class="newfunc-list">弹窗优化</div>
                     <div class="newfunc-list">优化侧边栏逻辑</div>
                     <div class="newfunc-title">调整：</div>
