--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -51,10 +51,10 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">3.06版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-title">3.06版本[已经开源]<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newversion">3.06[正在开发]</div>
+                    <div class="newversion">3.06[已经开源]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">自动拦截不受欢迎的应用程序</div>
                     <div class="newfunc-list">扫描完成后显示威胁数量</div>
