--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -20,8 +20,8 @@
 
     
 </head>
-
-<body>
+<div class="func-title">官网更新中...<br>你可以访问 https://xty64xty.netlify.app/ 来下载 Xdows Security</div>
+<!--<body>
     <div class="video-bg">
         <img src="./img/index-bg1.png" alt="" class="bg-img">
         <div class="banner1-info new">
@@ -88,7 +88,6 @@
     </div>
     <div class="doc top-right" style="position:relative;">
         <div class="doc-inner">
-            <!-- <div class="second-logo"></div> -->
             <div class="second-title">多种扫描方式</div>
             <div class="second-desc">支持使用多个扫描引擎。</div>
         </div>
@@ -103,7 +102,6 @@
         </div>
         <div class="doc-bg doc3">
             <!-- <div class="date-mobile-msg"></div>
-            <div class="date-pc-msg"></div> -->
             <img src="./img/xiaoxi.png" alt="" id="msg">
             <img src="" alt="" id="date-manage">
         </div>
@@ -111,7 +109,6 @@
     </div>
     <div class="doc top-right" style="position:relative;">
         <div class="doc-inner">
-            <!-- <div class="second-logo"></div> -->
             <div class="second-title">对比其他自制杀软</div>
             <div class="second-desc">没有对比就没有伤害。</div>
         </div>
@@ -320,6 +317,6 @@ $(document).ready(function() {
 <style>
 .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
 </style>
-</body>
+</body>-->
 
 </html>
