--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<div class="d-item-title">官网更新中...<br>你可以访问 https://xty64xty.netlify.app/ 来下载 Xdows Security Beta<br>以下为 3.03 版本下载链接</div>
+<div class="d-item-title">官网更新中...<br>你可以访问 https://xty64xty.netlify.app/ 来下载 Xdows Security Beta<br>以下为 Xdows Security 3.03 版本下载链接</div>
 <div class="down-btn"><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io/releases/download/v3.03/Xdows.Security.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
 
  <!--    <div class="header scrollTop">
