--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<html>
+<!-- <html>
 <head>
   <title>XTY64XTY网站</title>
 <meta name="msvalidate.01" content="685017DE891CA904635634E99A83DFF1" />
@@ -127,4 +127,4 @@
 <script src="script.js"></script>
 <script async src="//finicounter.eu.org/finicounter.js"></script>
 </body>
-</html>--!>
+</html> -->
